--- a/index.html
+++ b/index.html
@@ -86,6 +86,82 @@
             </div>
         </nav>
     </header>
+    <main class="container mx-auto">
+        <!-- Banner Slide Section -->
+        <section class="my-24 ">
+            <div class="carousel w-full h-[600px]  z-10">
+                <!-- slide 1 -->
+                <div id="slide1" class="carousel-item relative w-full">
+                    <div class="hero  rounded-2xl" style="background-image: url('images/banner1.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                            <div class="max-w-[679px]">
+                                <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
+                                <h4 class="text-[20px] font-medium">We supply highly quality organic products</h4>
+                                <button class="btn primary-color border-0 text-white mt-5">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide42" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- slide 2 -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <div class="hero  rounded-2xl" style="background-image: url('images/banner2.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                            <div class="max-w-[679px]">
+                                <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
+                                <h4 class="text-[20px] font-medium">We supply highly quality organic products</h4>
+                                <button class="btn primary-color border-0 text-white mt-5">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- slide3 -->
+                <div id="slide3" class="carousel-item relative w-full">
+                    <div class="hero  rounded-2xl" style="background-image: url('images/banner3.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                            <div class="max-w-[679px]">
+                                <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
+                                <h4 class="text-[20px] font-medium">We supply highly quality organic products</h4>
+                                <button class="btn primary-color border-0 text-white mt-5">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- Slide4 -->
+                <div id="slide4" class="carousel-item relative w-full">
+                    <div class="hero  rounded-2xl" style="background-image: url('images/banner4.png');">
+                        <div class="hero-overlay bg-gray-900 bg-opacity-70"></div>
+                        <div class="hero-content text-center text-neutral-content">
+                            <div class="max-w-[679px]">
+                                <h1 class="mb-3 text-[72px] font-extrabold ">Exotic tastes at your doorstep</h1>
+                                <h4 class="text-[20px] font-medium">We supply highly quality organic products</h4>
+                                <button class="btn primary-color border-0 text-white mt-5">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 </body>
 
