--- a/index.html
+++ b/index.html
@@ -160,6 +160,53 @@
                 </div>
             </div>
         </section>
+        <!-- Deal of Teh Day part -->
+        <section class="my-24">
+            <div class="flex justify-between items-center lg:flex-row flex-col text-center gap-14">
+                <div>
+                    <h1 class="text-[#121212] font-extrabold text-5xl ">Deal of the day</h1>
+                    <p class="font-medium text-[16px] w-[615px] my-5 text-gray-950">Contrary to popular belief, is not
+                        simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it
+                        over 2000 years old.</p>
+                </div>
+                <!-- right part part -->
+                <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                    <div class="flex flex-col">
+                        <span class="countdown font-extrabold text-5xl">
+                            <span style="--value:15;"></span>
+                        </span>
+                        days
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-ellipsis-vertical fa-lg"></i></p>
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-extrabold text-5xl">
+                            <span style="--value:10;"><i class="fa-solid fa-ellipsis-vertical fa-lg"></i></span>
+                        </span>
+                        hours
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-ellipsis-vertical fa-lg"></i></p>
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-extrabold text-5xl">
+                            <span style="--value:24;"></span>
+                        </span>
+                        min
+                    </div>
+                    <div>
+                        <p><i class="fa-solid fa-ellipsis-vertical fa-lg"></i></p>
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-extrabold text-5xl">
+                            <span style="--value:30;"></span>
+                        </span>
+                        sec
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
