shopping card Section push

--- a/index.html
+++ b/index.html
@@ -207,6 +207,263 @@
                 </div>
             </div>
         </section>
+        <!-- Shopping card Section-->
+        <section class="my-24">
+            <div class="grid lg:grid-cols-4 grid-cols-1 gap-5">
+                <!-- card 1 -->
+                <div class="card  bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
+                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <h3 class=" text-xl font-medium">Apples</h3>
+                        <!-- rating part -->
+                        <div class="rating my-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <!--Modal section  -->
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_8">
+                                <div class="modal-box">
+                                    <!-- modal details -->
+                                    <div>
+                                        <div class="card ">
+                                            <figure class="px-10 pt-10">
+                                                <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                                            </figure>
+                                            <div class="card-body items-center text-center">
+                                                <h3 class="my-3 text-4xl font-extrabold">Orange</h3>
+                                                <p class="card-title text-xl font-medium">Professional employees are
+                                                    there for you to pick the most amazing and fresh fruits.</p>
+
+                                                <!-- rating part -->
+                                                <div class="rating my-2">
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" checked />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- button -->
+                                    <div class="flex justify-center gap-10 mb-10">
+                                        <div class="modal-action">
+                                            <a href="#" class="btn btn-outline btn-secondary">Close</a>
+                                        </div>
+                                        <div class="modal-action">
+                                            <a href="#" class="btn primary-color text-white">Buy Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card  bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
+                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <h3 class=" text-xl font-medium">Orange</h3>
+                        <!-- rating part -->
+                        <div class="rating my-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <!--Modal section  -->
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_8">
+                                <div class="modal-box">
+                                    <!-- modal details -->
+                                    <div>
+                                        <div class="card ">
+                                            <figure class="px-10 pt-10">
+                                                <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                                            </figure>
+                                            <div class="card-body items-center text-center">
+                                                <h3 class="my-3 text-4xl font-extrabold">Red Dragon</h3>
+                                                <p class="card-title text-xl font-medium">Professional employees are
+                                                    there for you to pick the most amazing and fresh fruits.</p>
+
+                                                <!-- rating part -->
+                                                <div class="rating my-2">
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" checked />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- button -->
+                                    <div class="flex justify-center gap-10 mb-10">
+                                        <div class="modal-action">
+                                            <a href="#" class="btn btn-outline btn-secondary">Close</a>
+                                        </div>
+                                        <div class="modal-action">
+                                            <a href="#" class="btn primary-color text-white">Buy Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card  bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
+                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <h3 class=" text-xl font-medium">Red Dragon</h3>
+                        <!-- rating part -->
+                        <div class="rating my-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <!--Modal section  -->
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_8">
+                                <div class="modal-box">
+                                    <!-- modal details -->
+                                    <div>
+                                        <div class="card ">
+                                            <figure class="px-10 pt-10">
+                                                <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                                            </figure>
+                                            <div class="card-body items-center text-center">
+                                                <h3 class="my-3 text-4xl font-extrabold">Banana</h3>
+                                                <p class="card-title text-xl font-medium">Professional employees are
+                                                    there for you to pick the most amazing and fresh fruits.</p>
+
+                                                <!-- rating part -->
+                                                <div class="rating my-2">
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" checked />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- button -->
+                                    <div class="flex justify-center gap-10 mb-10">
+                                        <div class="modal-action">
+                                            <a href="#" class="btn btn-outline btn-secondary">Close</a>
+                                        </div>
+                                        <div class="modal-action">
+                                            <a href="#" class="btn primary-color text-white">Buy Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 4 -->
+                <div class="card  bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p class="card-title text-2xl font-semibold">12.90$ - 18.85$</p>
+                        <div class="bg-gray-200 w-[244px] h-1 my-4"></div>
+                        <h3 class=" text-xl font-medium">Banana</h3>
+                        <!-- rating part -->
+                        <div class="rating my-2">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <!--Modal section  -->
+                        <div class="card-actions ">
+                            <a href="#my_modal_8" class="text-[#F85559] text-xl font-medium">Details</a>
+                            <div class="modal" id="my_modal_8">
+                                <div class="modal-box">
+                                    <!-- modal details -->
+                                    <div>
+                                        <div class="card ">
+                                            <figure class="px-10 pt-10">
+                                                <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                                            </figure>
+                                            <div class="card-body items-center text-center">
+                                                <h3 class="my-3 text-4xl font-extrabold">Apples</h3>
+                                                <p class="card-title text-xl font-medium">Professional employees are
+                                                    there for you to pick the most amazing and fresh fruits.</p>
+
+                                                <!-- rating part -->
+                                                <div class="rating my-2">
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" checked />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                    <input type="radio" name="rating-2"
+                                                        class="mask mask-star-2 bg-[#F85559]" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- button -->
+                                    <div class="flex justify-center gap-10 ">
+                                        <div class="modal-action">
+                                            <a href="#" class="btn btn-outline btn-secondary">Close</a>
+                                        </div>
+                                        <div class="modal-action">
+                                            <a href="#" class="btn primary-color text-white">Buy Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
