--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         }
 
         .text-color {
-            color: rgba(18, 18, 18, 0.80);
+            color: #121212;
         }
     </style>
 </head>
 
 <body class="lato-font">
     <header class="container mx-auto my-5">
-        <nav>
+        <nav class=" ">
             <div class="navbar primary-color rounded-full p-4">
                 <!-- menu part -->
                 <div class="navbar-start hidden lg:flex md:w-auto md:flex lg:w-4/5">
@@ -162,7 +162,7 @@
         </section>
         <!-- Deal of Teh Day part -->
         <section class="my-24">
-            <div class="flex justify-between items-center lg:flex-row flex-col text-center gap-14">
+            <div class="flex justify-between items-center lg:flex-row flex-col text-center lg:text-left gap-14">
                 <div>
                     <h1 class="text-[#121212] font-extrabold text-5xl ">Deal of the day</h1>
                     <p class="font-medium text-[16px] w-[615px] my-5 text-gray-950">Contrary to popular belief, is not
@@ -464,8 +464,151 @@
                 </div>
             </div>
         </section>
+        <!-- shop button -->
+        <section class="-my-14">
+            <div class="flex justify-center ">
+                <button class="btn btn-error text-white">Shop All</button>
+            </div>
+        </section>
+        <!-- Meet the team section -->
+        <section class="my-24">
+            <div class="hero lg:h-[650px] rounded-2xl" style="background-image: url('images/team.png');">
+                <div class="hero-overlay bg-gray-900 bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                    <div class="max-w-[679px]">
+                        <h1 class="mt-10 text-5xl font-extrabold em-font">Meet the team section</h1>
+                        <p class="my-5">Contrary to popular belief, is not simply random text. It has roots in a piece
+                            of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <!-- Team member -->
+                        <div class=" grid md:grid-cols-2 lg:grid-cols-4 grid-cols-1 gap-40">
+
+                            <!-- member 1 -->
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-[679px]">
+                                    <div class="w-36 mx-auto mb-7">
+                                        <img src="images/member1.png" alt="">
+                                    </div>
+                                    <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Awlad Hossain</h1>
+                                    <h3 class="text-[14px]">Fruits Expert</h3>
+                                    <div class="grid justify-center gap-3 grid-cols-3 my-5">
+                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- member 2 -->
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-[679px]">
+                                    <div class="w-36 mx-auto mb-7">
+                                        <img src="images/member2.png" alt="">
+                                    </div>
+                                    <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap ">Safia Chowdhury</h1>
+                                    <h3 class="text-[14px]">Fruits Expert</h3>
+                                    <div class="grid justify-center gap-3 grid-cols-3 my-5">
+                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- member 3 -->
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-[679px]">
+                                    <div class="w-36 mx-auto mb-7">
+                                        <img src="images/member3.png" alt="">
+                                    </div>
+                                    <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Rokib Hossain</h1>
+                                    <h3 class="text-[14px]">Fruits Expert</h3>
+                                    <div class="grid justify-center gap-3 grid-cols-3 my-5">
+                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- member 4 -->
+                            <div class="hero-content text-center text-neutral-content">
+                                <div class="max-w-[679px]">
+                                    <div class="w-36 mx-auto mb-7">
+                                        <img src="images/member4.png" alt="">
+                                    </div>
+                                    <h1 class="mb-3 text-2xl font-extrabold whitespace-nowrap">Chaity</h1>
+                                    <h3 class="text-[14px]">Fruits Expert</h3>
+                                    <div class="grid justify-center gap-3 grid-cols-3 my-5">
+                                        <p><i class="fa-brands fa-facebook fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-twitter fa-2xl" style="color: #F85559;"></i></p>
+                                        <p><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #F85559;"></i></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Why Choose Us Section -->
+        <section class="my-24">
+            <div class="text-center m-5 my-10">
+                <h2 class="text-4xl text-[#121212] font-extrabold em-font mb-5">Why Choose Us Section</h2>
+                <p class="text-[#121212] text-sm font-medium lg:max-w-3xl mx-auto">Contrary to popular belief, is not
+                    simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                    2000 years old.
+                </p>
+            </div>
+        </section>
 
     </main>
+
+    <footer class="footer footer-center p-10 bg-black text-primary-content">
+        <div>
+            <!-- Logo Section -->
+            <div class="flex items-center justify-center gap-5 my-7 ">
+                <div><img src="images/logo.png" alt=""></div>
+                <div>
+                    <p class="text-white text-[40px] font-bold ">Fruit Burst</p>
+                </div>
+            </div>
+            <!-- menu part -->
+            <div class="grid lg:grid-cols-6 grid-cols-3 justify-center items-center gap-7">
+                <div class="text-[18px] font-semibold"><p>Home</p></div>
+                <div class="text-[18px] font-semibold"><p>About Us</p></div>
+                <div class="text-[18px] font-semibold"><p>Shop</p></div>
+                <div class="text-[18px] font-semibold"><p>All Fruits</p></div>
+                <div class="text-[18px] font-semibold"><p>Support</p></div>
+                <div class="text-[18px] font-semibold"><p>My Account</p></div>
+            </div>
+        </div>
+        <div>
+            <div class="grid grid-flow-col gap-4">
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+                        </path>
+                    </svg></a>
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+                        </path>
+                    </svg></a>
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                        class="fill-current">
+                        <path
+                            d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+                        </path>
+                    </svg></a>
+
+
+                <a>
+                    
+                </a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
