choose left part end

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                             <li>
                                 <a>Mango</a>
                                 <ul class="p-2">
-                                    <li><a>Harivanga</a></li>
-                                    <li><a>Amropoli</a></li>
+                                    <li><a>Yellow Mango</a></li>
+                                    <li><a>Red Mango</a></li>
                                 </ul>
                             </li>
                             <li><a>Apple</a></li>
@@ -559,6 +559,79 @@
                 </p>
             </div>
         </section>
+        <!-- Fruit Choose section -->
+        <section class="my-24">
+            <div class=" grid lg:grid-cols-3 grid-cols-1 gap-10 ">
+                <!-- left part -->
+                <div class="">
+                    <!-- Dedicated Team -->
+                    <div class="flex lg:flex-row flex-col gap-5 justify-center items-center lg:justify-start ">
+                        <div class="w-10 h-10 p-7 bg-slate-500 rounded-full relative">
+                            <div>
+                                <i class="fa-solid fa-users fa-2xl -mx-5 absolute" style="color: #ffffff;"></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col justify-center items-center lg:justify-start lg:items-start">
+                            <div>
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            </div>
+                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div>
+                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                    you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Fresh is Best -->
+                    <div class="flex lg:flex-row flex-col gap-5 justify-center items-center lg:justify-start my-5">
+                        <div class="w-10 h-10 p-7 bg-slate-500 rounded-full relative">
+                            <div>
+                                <i class="fa-solid fa-heart-circle-check fa-2xl -mx-5 " style="color: #fafafa; "></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col justify-center items-center lg:justify-start lg:items-start">
+                            <div>
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Fresh is Best</h3>
+                            </div>
+                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div>
+                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                    you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Gift Certificates -->
+                    <div class="flex lg:flex-row flex-col gap-5 justify-center items-center lg:justify-start ">
+                        <div class="w-10 h-10 p-7 bg-slate-500 rounded-full relative">
+                            <div>
+                                <i class="fa-solid fa-gift fa-2xl absolute -mx-4" style="color: #ffffff;"></i>
+                            </div>
+
+                        </div>
+                        <div class="flex flex-col justify-center items-center lg:justify-start lg:items-start">
+                            <div>
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team Gift Certificates</h3>
+                            </div>
+                            <div class="w-[130px] h-0.5  bg-slate-400 my-5"></div>
+                            <div>
+                                <p class="text-[16px] font-medium text-gray-500">Professional employees are there for
+                                    you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- center part -->
+                <div>
+
+                </div>
+                <!-- Right part -->
+                <div>
+
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer class="footer footer-center p-10 bg-black text-primary-content">
@@ -572,12 +645,24 @@
             </div>
             <!-- menu part -->
             <div class="grid lg:grid-cols-6 grid-cols-3 justify-center items-center gap-7">
-                <div class="text-[18px] font-semibold"><p>Home</p></div>
-                <div class="text-[18px] font-semibold"><p>About Us</p></div>
-                <div class="text-[18px] font-semibold"><p>Shop</p></div>
-                <div class="text-[18px] font-semibold"><p>All Fruits</p></div>
-                <div class="text-[18px] font-semibold"><p>Support</p></div>
-                <div class="text-[18px] font-semibold"><p>My Account</p></div>
+                <div class="text-[18px] font-semibold">
+                    <p>Home</p>
+                </div>
+                <div class="text-[18px] font-semibold">
+                    <p>About Us</p>
+                </div>
+                <div class="text-[18px] font-semibold">
+                    <p>Shop</p>
+                </div>
+                <div class="text-[18px] font-semibold">
+                    <p>All Fruits</p>
+                </div>
+                <div class="text-[18px] font-semibold">
+                    <p>Support</p>
+                </div>
+                <div class="text-[18px] font-semibold">
+                    <p>My Account</p>
+                </div>
             </div>
         </div>
         <div>
@@ -611,18 +696,45 @@
                 </a>
                 <!-- icon 4 -->
                 <a>
-                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em"
+                        viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <style>
+                            svg {
+                                fill: #ffffff
+                            }
+                        </style>
+                        <path
+                            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+                    </svg>
 
                 </a>
                 <!-- icon 5 -->
-                <a > 
-                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"/></svg>
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em"
+                        viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <style>
+                            svg {
+                                fill: #ffffff
+                            }
+                        </style>
+                        <path
+                            d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z" />
+                    </svg>
                 </a>
                 <!-- icon 6 -->
-                <a >
-                    <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/></svg>
+                <a>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="2em"
+                        viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                        <style>
+                            svg {
+                                fill: #ffffff
+                            }
+                        </style>
+                        <path
+                            d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z" />
+                    </svg>
                 </a>
-                
+
             </div>
         </div>
     </footer>
