choose center  part end

--- a/index.html
+++ b/index.html
@@ -623,8 +623,10 @@
                     </div>
                 </div>
                 <!-- center part -->
-                <div>
-
+                <div class="flex lg:flex-1 justify-center">
+                    <div>
+                        <img src="images/whychoose1.png" alt="">
+                    </div>
                 </div>
                 <!-- Right part -->
                 <div>
